[package]
name = "search_rl"
version = "0.1.0"
edition = "2021"
description = "Reinforcement learning search optimization"
license = "MIT"
keywords = ["rl", "ml", "machine-learning", "ai", "search"]
categories = ["science"]
repository = "https://github.com/gsidebottom/search-rl"
rust-version = "1.84.0 "

[dependencies]
burn = { version = "0.16.0", features = ["wgpu", "train", "vision"] }
#rl = "0.4"
strum = "0.26"
strum_macros = "0.26"
itertools = "0.14"
rand = "0.9"
random_choice = "0.3"
clap = { version = "4.5.29", features = ["derive"] }
smallvec = "1"
ordered-float = "5"

#libsqlite3-sys = { version = "0.30.1", features = ["bundled"]}
# Serialization
#log = {workspace = true}
#serde = {workspace = true, features = ["std", "derive"]}
#serde = {version = "1", features = ["std", "derive"]}


[[example]]
name = "tangled"

[[example]]
name = "hex"

